Fix video and alignment on Research page

--- a/app/components/ResearchContent/intro.scss
+++ b/app/components/ResearchContent/intro.scss
@@ -3,12 +3,14 @@
   color: #182153;
   padding-top: 2%;
   padding-bottom: 2%;
-  padding-right: 20%;
-  padding-left: 20%;
-}
 
-.video { 
-  margin: 0 auto; 
-  width: 400px; 
-  height: 240;
+  @media only screen and (min-width: 940px) {
+    padding-right: 20%;
+    padding-left: 20%;
+  }
+  @media only screen and (max-width: 939px) {
+    padding-right: 10%;
+    padding-left: 10%;
+  }
+  
 }
